# fundGuard

./: .gitignore  Makefile  README.md
data/generator/: README.md  fix.py  pyproject.toml  recover.py  recover2.py  recover3.py
data/generator/config/: default.yaml  evaluation.yaml  load_test.yaml
data/generator/output/: .gitkeep
data/generator/scripts/: generate_evaluation.py  stream_to_kafka.py  visualize_fraud_rings.py
data/generator/src/synthetic_generator/: main.py
data/generator/src/synthetic_generator.egg-info/: PKG-INFO
data/generator/src/synthetic_generator/core/: account_factory.py
data/generator/tests/: __init__.py  conftest.py  test_account_factory.py  test_config.py  test_evaluation.py  test_fraud_injectors.py  test_integration.py  test_kafka.py  test_locale.py  test_models.py  test_output.py  test_seed_manager.py  test_stats.py  test_transaction_generator.py
data/generator/tests/test_fraud/: __init__.py
docs/: architecture.md
services/: docker-compose.yml  integration_test.py  publish_test.py  test_all.sh  ws_test.py
services/dashboard/: Dockerfile  docker-compose.yml
services/dashboard-api/app/: database.py  main.py  models.py
services/dashboard-api/app/routes/: cases.py  history.py
services/dashboard-api/tests/: test_api.py
services/dashboard/src/: App.tsx  index.css
services/dashboard/src/config/: endpoints.ts
services/dashboard/src/layout/: MainLayout.tsx
services/dashboard/src/pages/: Alerts.tsx  Cases.tsx  Dashboard.tsx  Documentation.tsx  GraphView.tsx  Profile.tsx  Reports.tsx
services/edge-service/: Dockerfile  docker-compose.yml
services/edge-service/app/: features.py  kafka.py  main.py  metrics.py  redis_client.py  schemas.py  scorer.py
services/edge-service/ml/: export_onnx.py  train.py
services/edge-service/models/: xgboost_model.onnx
services/edge-service/tests/: test_api.py
services/graph-service/: Dockerfile  docker-compose.yml
services/graph-service/app/: consumer.py  gds.py  graph.py  main.py  schemas.py
services/graph-service/tests/: test_api.py
services/llm-service/: Dockerfile  docker-compose.yml
services/llm-service/app/: __init__.py  config.py  llm.py  main.py  pdf_gen.py  rag.py  schemas.py  security.py
services/llm-service/data/faiss_index/: index.faiss  index.pkl
services/llm-service/scripts/: build_index.py
services/ops/: DATABASE_INSTRUCTIONS.md
services/risk-engine/: docker-compose.yml
services/risk-engine/app/: database.py  main.py  models.py  schemas.py
services/shared/: setup.py
