[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-generator"
version = "0.1.0"
description = "Synthetic data generator for Indian banking transactions with fraud pattern injection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FundGuard Team", email = "team@fundguard.com"}
]
keywords = ["synthetic-data", "fraud-detection", "banking", "kafka"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.5,<3.0",
    "faker>=22.0,<23.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "aiokafka>=0.10,<1.0",
    "pyyaml>=6.0,<7.0",
    "asyncio-throttle>=1.0,<2.0",
    "matplotlib>=3.8,<4.0",
    "networkx>=3.2,<4.0",
    "pyarrow>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<1.0",
    "hypothesis>=6.92,<7.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.1,<1.0",
    "pytest-cov>=4.1,<5.0",
]

[project.scripts]
synthetic-generator = "synthetic_generator.main:main"

[project.urls]
Homepage = "https://github.com/fundguard/synthetic-generator"
Documentation = "https://github.com/fundguard/synthetic-generator#readme"
Repository = "https://github.com/fundguard/synthetic-generator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synthetic_generator = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["faker.*", "aiokafka.*", "networkx.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["synthetic_generator"]
